# mlrun

./: .gitattributes  LICENSE.md  LICENSE.rst  MANIFEST.in  README.rst  buildext.py  deploy.sh  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py
configs/: desktop.ini  jetson.ini
mlrun/: __init__.py  __main__.py  config.json  config.py  loader.py  main.py  schema.py  simple_util.py  strings.py  typings.py  util.c  util.py  util.pyx
mlrun/cameras/: base.py  dummy.py  file.py  opencv.py
mlrun/engines/: base.py  tensorflow.py  tflite.py
mlrun/loggers/: __init__.py  base.py  colored.py  standard.py
mlrun/models/v3tpu/: model_edgetpu.tflite
mlrun/publishers/: base.py  networktables.py
requirements/: all.txt  arm.txt  intel.txt
v1tpu/: model.tflite  model_edgetpu.tflite
v2tpu/: model.tflite  model_edgetpu.tflite
v3/: dict.txt  model.tflite
