[tool.poetry]
name = "mlrun"
version = "1.0.0"
description = "An easy-to-use, modular object detection inferencing engine for embedded environments."
authors = ["Nicholas Hubbard <hubbardn95@gmail.com>"]
build = "buildext.py"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "1.18.1"
coloredlogs = "14.0"
pynetworktables = "2020.0.3"
pyzmq = "19.0.0"
tensorflow-gpu = "2.1.0"
tflite-runtime = { url = "https://dl.google.com/coral/python/tflite_runtime-2.1.0.post1-cp36-cp36m-linux_x86_64.whl", markers = "platform_machine == 'x86_64'" }
opencv-python = "4.2.0.32"
typing-extensions = "^3.7.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
