[project]
name = "mlrun"
version = "1.0.0a0"
description = "An inference engine for object detection systems."
authors = ["Nicholas Hubbard <nhubbard@users.noreply.github.com>"]
license = "GPLv2"
readme = "README.rst"
python = "^3.6"
homepage = "https://github.com/Robocubs/MLRun"
repository = "https://github.com/Robocubs/MLRun"
documentation = "work in progress"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
keywords = ["ai", "machine learning", "object detection", "first robotics"]

[build-system]
requires = ["wheel>=0.34.0", "setuptools>=40.8.0", "pip>=20.0.0", "testresources>=2.0.0", "toml>=0.10.0"]
build-backend = "setuptools.build_meta"
